gcc/testsuite/gdc.test/runnable/imports/test61a.d
module imports.test61a;

int bar()
{
    return 12;
}
